more config stuff

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=118ad1c7656e9b1feb9634a5ed494f76",
+    "/css/app.css": "/css/app.css?id=2aad090a64fe3feb8a66de6c5e334dd8"
 }
